# asumeohr-save-system-poc

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: game_settings.json
data/json_implementation/assets/: equipments.json  items.json  skills.json  weapons.json
data/json_implementation/assets/maps/map1/: metadata.json
data/json_implementation/assets/maps/map2/: metadata.json
data/json_implementation/assets/maps/map3/: metadata.json
data/json_implementation/saves/new_save/: global.json  metadata.json
data/json_implementation/saves/save1/: equipments.json  global.json  inventory.json  metadata.json  skills.json
data/json_implementation/saves/save2/: equipments.json  global.json  inventory.json  metadata.json  skills.json
data/sqlite_implementation/: DB_CREATION.sql  DB_DATA.sql  create.sh  game_data.db
src/: Game.cpp  Game.h  IGameLoader.cpp  IGameLoader.h  JsonGameLoader.cpp  JsonGameLoader.h  Main.cpp  SQLiteGameLoader.cpp  SQLiteGameLoader.h
src/cache/: HeavyResourceLink.cpp  HeavyResourceLink.h  HeavyResourcesCache.cpp  HeavyResourcesCache.h
src/commands/actions/: DropCommand.cpp  DropCommand.h  EquipCommand.cpp  EquipCommand.h  ForgetCommand.cpp  ForgetCommand.h  GiveCommand.cpp  GiveCommand.h  LearnCommand.cpp  LearnCommand.h  MoveCommand.cpp  MoveCommand.h  TeleportCommand.cpp  TeleportCommand.h  UnequipCommand.cpp  UnequipCommand.h
src/commands/display/: DisplayAllCommand.cpp  DisplayAllCommand.h  DisplayEquipmentsCommand.cpp  DisplayEquipmentsCommand.h  DisplayInventoryCommand.cpp  DisplayInventoryCommand.h  DisplayMapCacheCommand.cpp  DisplayMapCacheCommand.h  DisplayMapCommand.cpp  DisplayMapCommand.h  DisplayPlayerCommand.cpp  DisplayPlayerCommand.h  DisplaySkillsCommand.cpp  DisplaySkillsCommand.h  DisplayWeaponCommand.cpp  DisplayWeaponCommand.h
src/commands/end/: ExitCommand.cpp  ExitCommand.h  SaveAndExitCommand.cpp  SaveAndExitCommand.h  SaveCommand.cpp  SaveCommand.h
src/commands/settings/: ProgressCommand.cpp  ProgressCommand.h  SetDifficultyCommand.cpp  SetDifficultyCommand.h  ToggleChoseClassCommand.cpp  ToggleChoseClassCommand.h
src/entities/: Equipment.cpp  Equipment.h  Item.cpp  Item.h  Map.cpp  Map.h  Player.cpp  Player.h  Skill.cpp  Skill.h  Weapon.cpp  Weapon.h
src/enums/: Command.h  Commands.h  Difficulty.h  Direction.h  ItemType.h  State.h
src/exceptions/: BadInputException.h  CommandNotFoundException.h  DatabaseUnavailableException.h  DirectionNotFoundException.h  EquipmentNotFound.h  EquipmentNotFoundException.h  ImpossibleActionException.h  ItemNotFound.h  ItemNotFoundException.h  MapNotFoundException.h  NoMatchingSignature.h  NotImplementedException.h  SQLException.h  SaveNotFound.h  SaveNotFoundException.h  SkillNotFound.h  SkillNotFoundException.h  WeaponNotFoundException.h
src/interfaces/: ICommand.h  ILimitedDurabilityItem.h  IUsableItem.h
src/settings/: GameSettings.cpp  GameSettings.h
